# aurora-planner

./: README.md
config/: test_sample_dubins.ini  test_sample_dubins_v2.ini
src/examples/: CMakeLists.txt  lcm_subscriber.cpp
src/lcmtypes/: routePlannerInputs_t .lcm  sample_data_vis.lcm
src/sampling/: CMakeLists.txt  ltl_sampling_dubins.cpp  ltl_sampling_simple.cpp  ltl_sampling_simple.h  region.cpp  sample_space.cpp
src/tests/: CMakeLists.txt  planner_input.cpp  test_sample_dubins.cpp  test_sample_dubins.ini  test_sample_dubins_v2.cpp
src/trajectory/: dubins_steer.cpp
src/trans_sys/: spot_hoa_interpreter.cpp
